--- a/_posts/2021-02-04-ces-2021.markdown
+++ b/_posts/2021-02-04-ces-2021.markdown
@@ -9,7 +9,7 @@ excerpt: 2021년. 무엇보다 인간의 생활이 중요해진 시대.
 toc: true
 header-img: /assets/images/life-is-on-lg-ces2021.png
 ---
-오늘 CES2021에 대한 강연을 듣고 생각을 정리하여 봅니다. 기업의 눈이 아닌 사람의 눈으로 우리 시대의 변화를 바라보라는 메세지를 받은 좋은 강연이었습니다. 좋은 강연을 마련해주신 회사와 발표해주신 이용덕교수님께 감사드립니다.
+오늘 CES2021에 대한 강연을 듣고 생각을 정리하여 봅니다. 기업의 눈이 아닌 사람의 눈으로 우리 시대의 변화를 바라보라는 메세지를 받은 강연이었습니다. 좋은 강연을 마련해주신 회사와 발표해주신 이용덕교수님께 감사드립니다.
 
 ***
 
